--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Fixecl的个人博客
 email: fixecl@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  欢迎访问
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://fixecl.github.io" # the base hostname & protocol for your site
 twitter_username: ff
