--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,55 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: Fixecl的个人博客
-email: fixecl@hotmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  欢迎访问
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://fixecl.github.io" # the base hostname & protocol for your site
-twitter_username: ff
+title: Fixecl 's Notes
+brief-intro: M C E
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://fixecl.github.io" # the base hostname & protocol for your site
+
+permalink: /:year/:month/:day/:title/
+
+# other links
 github_username:  fixecl
+Personal email: fixecl@hotmail.com
+Job email: liu_youzhi@outlook.com
+
+description_footer: 本站记录我前端之旅的沿途风景！
+
+# comments
+# two ways to comment, only choose one, and use your own short name
+# 两种评论插件，选一个就好了，使用自己的 short_name
+duoshuo_shortname: #hygblog
+disqus_shortname: fixecl
+
+# statistic analysis 统计代码
+# 百度统计 id，将统计代码替换为自己的百度统计id，即
+# hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
+# xxxxx字符串
+baidu_tongji_id: 9decb34bcbe75468ec9a8460fd290457
+google_analytics_id: UA-150476564-1 # google 分析追踪id
 
 # Build settings
 markdown: kramdown
 
-paginate: 4
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 
-author: Fixecl
+# port
+# port: 1234
 
+# url
+category_dir: category/
+tag_dir: tag/
+
+# excerpt
+excerpt_separator: "\n\n\n\n"
+
+# paginate
 gems: [jekyll-paginate]
+paginate: 6
