--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ github_username:  fixecl
 Personal email: fixecl@hotmail.com
 Job email: liu_youzhi@outlook.com
 
-description_footer: 本站记录我前端之旅的沿途风景！
+description_footer: 我的在线笔记本
 
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
+duoshuo_shortname: #fixecl
 disqus_shortname: fixecl
 
 # statistic analysis 统计代码
