--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: HyG
-brief-intro: Front-end Dev Engineer
+title: Fixecl 's Notes
+brief-intro: M C S E
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://fixecl.github.io" # the base hostname & protocol for your site
 
