--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Fixecl 's Notes
-brief-intro: M C S E
+brief-intro: 保持对新事物的探索精神
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://fixecl.github.io" # the base hostname & protocol for your site
 
